--- a/css/styles.css
+++ b/css/styles.css
@@ -1,83 +1,94 @@
 /* Custom Properties */
 :root {
-    --Fuente: 'Archivo', sans-serif;
-    --ColorFondo: rgba(0,0,0,.8);
+  --Fuente: "Archivo", sans-serif;
+  --ColorFondo: rgba(0, 0, 0, 0.8);
 }
 
 html {
-    box-sizing: border-box;
-    font-size: 62.5%; /* 1 rem = 10px */
+  box-sizing: border-box;
+  font-size: 62.5%; /* 1 rem = 10px */
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
-    background-color: var(--ColorFondo);
+  background-color: var(--ColorFondo);
 }
 
-h1, h2 {
-    font-family: var(--Fuente);
-    color: rgba(29,161,242,1.00);
-    margin: 0;
-    font-size: 5rem;
-    text-transform: uppercase;
-    padding: 2rem 0;
-    text-align: center;
+h1,
+h2 {
+  font-family: var(--Fuente);
+  color: rgba(29, 161, 242, 1);
+  margin: 0;
+  font-size: 5rem;
+  text-transform: uppercase;
+  padding: 2rem 0;
+  text-align: center;
 }
 
 .container {
-    background-color: whitesmoke;
-    max-width: 1200px;
-    margin: 0 auto;
+  background-color: whitesmoke;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 form {
-    max-width: 1100px;
-    padding: 3rem;
-    font-family: var(--Fuente);
-    font-size: 1.5rem;
+  max-width: 1100px;
+  padding: 3rem;
+  font-family: var(--Fuente);
+  font-size: 1.5rem;
 }
 
 form label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: .5rem;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 select {
-    margin-bottom: 2rem;
-    width: 100%;
-    height: 4rem;
-    border-radius: 5px;
-    border: none;
-    outline: none;
+  margin-bottom: 2rem;
+  width: 100%;
+  height: 4rem;
+  border-radius: 5px;
+  border: none;
+  outline: none;
 }
 select:focus {
-    border-top: 1px solid #1DA1F2;
+  border-top: 1px solid #1da1f2;
 }
 
 @media (min-width: 550px) {
-    .contenedor-campos {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        column-gap: 3rem;    
-    }
-    .campo:nth-child(6) {
-        grid-column: 2/4;
-        margin: 0 auto;
-        width: 70%;
-    }
+  .contenedor-campos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 3rem;
+  }
+  .campo:nth-child(6) {
+    grid-column: 2/4;
+    margin: 0 auto;
+    width: 70%;
+  }
 }
 
 .resultado {
-    text-align: center;
-    font-family: var(--Fuente);
-    font-size: 2rem;
-    font-weight: bold;
-    text-transform: uppercase;
+  text-align: center;
+  font-family: var(--Fuente);
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 .resultado p {
-    border-bottom: 1px solid #e1e1e1;
-    padding-bottom: 2rem;
+  border-bottom: 1px solid #e1e1e1;
+  padding-bottom: 2rem;
+}
+
+.alert {
+  color: white;
+  padding: 1rem;
+}
+.error {
+  background-color: rgb(155, 6, 6);
 }
